--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 </ul>
             </div>
             <div class="bottom">
-                <a href="#" class="settings rounded-right"><i class="mdi mdi-settings mdi-spin"></i></a>
+                <a href="#" class="settings rounded-right"><i class="mdi mdi-phone mdi-spin"></i></a>
             </div>
         </div>
         <!-- end Style switcher -->
