--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -607,7 +607,7 @@
         <!-- Style switcher -->
         <div id="color-switcher" style="left: 0px;">
             <div>
-                <ul class="pattern">
+                <ul class="">
                     <li class="list-inline-item"><a href="https://wa.me/+918129380457"><i class="mdi mdi-whatsapp"></i></a></li>
                     <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=100010353343151"><i class="mdi mdi-facebook"></i></a></li>
                     <li class="list-inline-item"><a href="https://instagram.com/sh_favas?igshid=1i5sg46bh54xb"><i class="mdi mdi-instagram"></i></a></li>
