--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 <div class="row mt-5">
                     <div class="col-lg-12">
                         <div class="form-kerri">
-                            <form>
+                            <form action="mailto:muhammedfavas@gmail.com" method="post" class="main-input" enctype="text/plain">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group mt-2">
